aula2 de introducao python

--- a/aplicacao-web-html/introducao.html
+++ b/aplicacao-web-html/introducao.html
@@ -1,9 +1,25 @@
 <html> 
+    <head>
+        <style>
+            body {
+                /*background-image: url("");
+                background-size: cover;
+                background-position: center;*/
+                background-color: rgb(0, 0, 0); 
+                font-size: 25px;
+                color: rgb(255, 255, 255); /*cor do texto*/
+            }
+        </style>
+    </head>
+
     <body> 
-
-
-
-
-
+        <center>
+            <p><b> TITUjbuhbLO </b></p>
+            <p> texto </p>
+            <p> titulo imagem </p>
+            <img src="url" />
+            <p><a href="url"> nome link </a></p>
+            <br>
+        </center>
     </body>
 </html>
