--- a/aplicacao-web-html/outra_aba.html
+++ b/aplicacao-web-html/outra_aba.html
@@ -1,5 +1,21 @@
 <html>
     <body>
-        <p> ola </p>
+        <center>
+            <p> ola </p>
+
+            <!-- target 
+                    target="_blank": link aberto em uma nova aba do navegador.
+                    target="_self": link aberto na mesma aba do navegador (padrão).
+                    target="_parent": link aberto no quadro pai, útil em quadros (framesets).
+                    target="_top": link substitui todo o conteúdo na aba do navegador.
+            --> 
+
+            <a href="https://eadcampus.spo.ifsp.edu.br/" target="_blank"> blank </a>
+            <br>
+            <a href="https://eadcampus.spo.ifsp.edu.br/" target="_self"> self </a> 
+            <br>
+            <a href="https://eadcampus.spo.ifsp.edu.br/" target="_top"> top </a>
+            <br>
+        </center>
     </body>
 </html>
