--- a/aplicacao-web-html/estrutura_textos_links.html
+++ b/aplicacao-web-html/estrutura_textos_links.html
@@ -1,95 +1,110 @@
 <html> 
-    <head>
-        <title> titulo </title> <!--aparece na barra de título do navegador quando a página é visualizada.-->
+    <head> <!-- conjunto de informacoes que nao sao visiveis na pagina, mas contem informacoes sobre ela -->
+        <!-- aparece na barra de título do navegador quando a página é visualizada.-->
+        <title> titulo da pagina (opc) </title>
 
         <meta name = ”author” content = “Luk Cho Man”>
         <meta name = ”description” content = “Aula 3 HTML”>
         <meta name = ”keywords” content = “IFSP, SPO,SCI”>
-        <!--meta informações são utilizadas para localizar a
-        página por mecanismos de busca. -->
+        <!-- meta informações são utilizadas para localizar a página por mecanismos de busca -->
 
-        <style>
+        <style> /* define o estilo do conteudo das tags usando CSS */ 
             body {
                 /*background-image: url("");
                 background-size: cover;
                 background-position: center;*/
                 background-color: rgb(0, 0, 0); 
                 font-size: 25px;
-                color: rgb(255, 255, 255); /*cor do texto*/
+                color: rgb(255, 255, 255); /* cor do texto */
+            }
+
+            a {
+                color:blue
+            }
+
+            a:visited {
+                color:blue
             }
         </style>
     </head>
 
     <body> 
-        <p align="center" ><strong> TITULO </strong></p> <!--p = paragrafo, strong = negrito, align poder ser left, right ou center.-->
-        <center> <!--centraliza tudo que estiver dentro.-->
-            <p> texto </p>
-            <p> titulo imagem </p>
-            <p><em><u> texto em italico e sublinhado </u></em> </p> <!-- <em> italico, <u> sublinhado-->
-            <img src="url" />
-            <p><a href="https://eadcampus.spo.ifsp.edu.br/"> link externo </a></p> <!-- link externo <a> -->
-            <p><a href="outra_aba.html"> link interno </a></p> <!-- link interno, pra outro arquivo na mesma pasta desse -->
-            <br> <!--quebra de linha.-->
+        <!-- <p> = paragrafo, <b> = negrito, align poder ser left, right ou center = posicao na pagina -->
+        <p align="center" ><b> texto no centro em negrito </b></p> 
 
-            <marquee direction="up" behavior="scroll" bgcolor="blue" height="140" width="700" scrollamount="10" style="display: flex; justify-content: center;"> texto que se move </marquee>
-            <!--
-            behavior: Este atributo define o movimento do texto:
-                scroll: O texto se move de um lado para o outro sem parar.
-                slide: O texto desliza de um lado para o outro e para.
-                alternate: O texto vai de um lado para outro alternadamente
-            bgcolor: Define a cor de fundo da área da faixa onde o texto passa.
-            direction: Define a direção do movimento do texto dentro da area do marquee. Pode ser:
-                left: Movimento da direita para a esquerda (padrão).
-                right: Movimento da esquerda para a direita.
-                up: Movimento de baixo para cima.
-                down: Movimento de cima para baixo.
-            height: Define a altura da área do <marquee>.
-            width: Define a largura da área do <marquee>.
-            hspace: Define a quantidade de espaço horizontal ao redor do <marquee>.
-            vspace: Define a quantidade de espaço vertical ao redor do <marquee>.
-            loop: Define o número de vezes que o <marquee> repetira. -1(valor padrao) significa infinitamente.
-            scrollamount: Define a velocidade de rolagem do texto em pixels por segundo.
-            scrolldelay: Define o atraso em milissegundos antes de reiniciar a rolagem após completar uma iteração.
-            truespeed: Se definido como true, tenta manter uma velocidade de rolagem constante, independentemente do desempenho do navegador.
-            style="
-                display: flex;(permite que o conteudo dentro do marquee seja dinamico) 
-                justify-content: center;(alinhamento horizontal) 
-                align-items: center;(alinhamento vertical)"
-            cuidado com conflitos usando os dois alinhamentos simultaneamente
-            -->
+        <center> <!-- centraliza na pagina tudo que estiver entre as tags -->
+            <p><i><u> texto em italico e sublinhado </u></i> </p> <!-- <i> = italico, <u> = sublinhado -->
 
+            <!-- tamanhos dos textos -->
             <h1> texto muito grande </h1>
             <h2> texto grande </h2>
             <h3> texto medio </h3>
             <h4> texto pequeno </h4>
             <h5> texto muito pequeno </h5>
-            <h6> texto menor possivel </h6>
+            <h6> texto extremamente pequeno </h6>
 
-            <div> <!--serve apenas como um contêiner genérico para o conteúdo dentro dela. não terá nenhuma aparência ou comportamento específico sem estilização adicional.-->
-                <h1>Título da Página</h1>
-                <p>Este é um parágrafo dentro de uma divisão.</p>
-                <img src="imagem.jpg">
-                <br>
-                <a href="pagina.html">Link para outra página</a>
-            </div>
-        </center>
-
-        <pre align="center"> <!--usado quando se quer manter a formatacao de um texto tirado de algum lugar-->
+            <pre> <!-- usado quando se quer manter a formatacao de um texto tirado de algum lugar -->
 Bem-vindo à nossa página web!
 Nossa empresa oferece uma variedade de produtos e serviços para atender às suas necessidades. 
 Desde produtos eletrônicos até soluções de software,
 estamos aqui para ajudar.
 Explore nosso site para descobrir mais sobre o que temos a oferecer. Se tiver alguma dúvida, não hesite em nos contatar.
 Esperamos poder atendê-lo em breve!
-        </pre>
+            </pre>
 
-        <a href="url" download="nome_para_o_arquivo_que_sera_baixado.tipo do arquivo"> download pelo navegador </a>
-        <br>
-        <a href="url" type="o que e o tipo do arquivo/tipo do arquivo"> interpretado pelo navegador </a>
-        <!-- download = ao clicar no link, o arquivo do link sera baixado
-             type = indica como o navegador deve entender o arquivo, podendo ser aberto com certo 
-             aplicativo proprio para abrir arquivos de um certo tipo, ex: "video/mp4, audio/mp3"
-        -->
+            <!-- colocar um texto que se movimenta -->
+            <marquee direction="up" behavior="alternate" bgcolor="blue" height="150" width="1000"
+            scrollamount="7" style="display: flex; justify-content: center;"> texto que se move </marquee>
+            <!--
+            direction - define a direção do movimento do texto dentro da area do marquee:
+                left: movimento da direita para a esquerda (padrão)
+                right: movimento da esquerda para a direita
+                up: movimento de baixo para cima
+                down: movimento de cima para baixo
+            behavior - este atributo define o tipo do movimento do texto:
+                scroll: o texto se move de um lado para o outro sem mudar de direcao
+                slide: o texto desliza de um lado para o outro e para
+                alternate: o texto vai de um lado para outro alternadamente
+            bgcolor - define a cor de fundo da area do marquee
+            height - define a altura da área do marquee (+)
+            width - define a largura da área do marquee (+)
+            hspace - define a quantidade de espaço horizontal ao redor do marquee (-)
+            vspace - define a quantidade de espaço vertical ao redor do marquee (-)
+            scrollamount - define a velocidade de rolagem do texto em pixels por segundo (+)
+            scrolldelay - define o atraso em milissegundos antes de reiniciar a rolagem após completar uma iteração (-)
+            loop - define o número de ciclos do movimento, -1 (valor padrao) = infinitamente
+            truespeed - variacao na velocidade do texto:
+                true: velocidade de rolagem constante, independentemente do desempenho do navegador
+                false: velocidade de rolagem ajustada pelo navegador (padrao) 
+            style="
+                display: flex;(permite que o conteudo dentro do marquee seja dinamico) 
+                justify-content: center;(alinhamento no meio horizontal) 
+                align-items: center;(alinhamento no meio vertical)"
+            cuidado com conflitos usando os dois alinhamentos simultaneamente
+            -->
+
+            <!-- links <a> -->
+
+            <!-- link externo = para outra pagina que nao esta dentro do pacote desse arquivo -->
+            <p><a href="https://eadcampus.spo.ifsp.edu.br/"> link externo </a></p> <!-- href="link da pagina" -->
+                
+            <!-- link interno = para outro arquivo que esta no mesmo pacote desse -->
+            <p><a href="imagens_audios_videos.html"> link interno </a></p> <!-- href="arquivo html dentro desse pacote" -->
+        
+            <!-- download = baixa o arquivo que esta no link -->
+            <p><a href="imagem_exemplo.png" download> uso do download </a></p>
+
+            <br> <!--quebra de linha.-->
+
+            <!-- 
+            type="" mostra ao navegador como entender o arquivo, ex: "video/mp4", "audio/mp3, "image/png" 
+            usado normalmente nas tags <link> ou <script>
+            -->
+
+            <!-- <div> = contêiner genérico para o conteúdo dentro dela, nao tendo nenhuma 
+            aparencia ou comportamento especifico sem estilização adicional -->
+            <div> </div>
+        </center>
 
         <!-- Listas <li></li>
         listas ordenadas (com numeros indicando as linhas) começam com a tag <ol>
@@ -235,12 +250,26 @@ Esperamos poder atendê-lo em breve!
             </table>
 
             <!--
-                tags de tabela
-                    th - Define uma célula de cabeçalho da tabela
-                    thead - Define o cabeçalho da tabela
-                    tbody - define o corpo da tabela
-                    tfoot - define o rodapé da tabela
+            tags de tabela
+            th - Define uma célula de cabeçalho da tabela
+            thead - Define o cabeçalho da tabela
+            tbody - define o corpo da tabela
+            tfoot - define o rodapé da tabela
             -->
+
+            <table style="text-align: center;" border="1"> 
+                <thead>
+                    <tr><th>Marca</th><th>Modelo</th><th>Ano</th><th>Valor</th></tr> 
+                </thead>
+                <tbody>
+                    <tr><td> Volkswagen </td><td>Golf</td> <td>2009</td><td>R$38.500</td></tr>
+                    <tr><td> Fiat </td><td> Palio </td><td> 2010 </td><td> R$19.700 </td></tr>
+                    <tr><td> Honda </td><td> Civic </td><td> 2012 </td><td> R$61.500 </td></tr>
+                </tbody> 
+                <tfoot>
+                    <tr> <td colspan ="4">Melhor preço da Armenia </td> </tr>
+                </tfoot> 
+            </table>
         </center>
     </body>
 </html>
